--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,17 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Tsubonofuta">
+        <activity
+            android:name=".SettingsActivity"
+            android:exported="true"
+            android:label="@string/title_activity_settings"
+            android:theme="@style/Theme.Tsubonofuta">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
 
         <meta-data
             android:name="xposedmodule"
@@ -19,8 +30,9 @@
         <meta-data
             android:name="xposedminversion"
             android:value="82" />
-
-        <meta-data android:name="xposedscope" android:resource="@array/apps" />
+        <meta-data
+            android:name="xposedscope"
+            android:resource="@array/apps" />
     </application>
 
 </manifest>
