--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'com.android.application'
+    id 'com.google.android.gms.oss-licenses-plugin'
     id 'org.jetbrains.kotlin.android'
 }
 
@@ -10,7 +11,7 @@ android {
         applicationId "space.aioilight.tsubonofuta"
         minSdk 28
         targetSdk 32
-        versionCode 2
+        versionCode 4
         versionName "2.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -79,4 +80,6 @@ dependencies {
     androidTestImplementation 'androidx.compose.ui:ui-test-junit4:1.1.1'
 
     implementation 'com.crossbowffs.remotepreferences:remotepreferences:0.8'
+
+    implementation 'com.google.android.gms:play-services-oss-licenses:17.0.0'
 }
