--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,9 @@ buildscript {
     ext {
         compose_version = '1.0.1'
     }
+    dependencies {
+        classpath 'com.google.android.gms:oss-licenses-plugin:0.10.5'
+    }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
     id 'com.android.application' version '7.1.2' apply false
